2004-07-14  Julien Puydt  <jpuydt@free.fr>

	* src/addressbook_window.h, src/addressbook_window.cpp
	(gm_addressbook_window_edit_contact_dialog_run): Renamed the variable
	edit_local_contact to the more accurate edit_existing_contact,
	and made it an argument to the function, since its computation is 
	problematic.
	(new_contact_cb, properties_cb): Made it cope with the previous change.
	* src/calls_history_window.cpp (add_contact_cb): Likewise.

2004-07-07  Julien Puydt <jpuydt@free.fr>

	* lib/contacts/gm_contacts.cpp: Fixed a little bug in the
	gnomemeeting_addressbook_is_local function (found by myself, fix
	by Damien).
	
2004-07-06  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp: Added notifiers for STUN support.

2004-07-06  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in, src/endpoint.cpp, src/pref_window.cpp:
	Added preliminary STUN support to go through non-symmetric NAT routers.

	* src/main_window.cpp: Cleanups.

2004-07-05 Kilian Krause <kk@verfaction.de>

	* configure.in: Updated REC versions of libs.

2004-07-04  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Lowered deps.

	* src/endpoint.cpp: Removed code using ffmpeg capabilities.

2004-06-29  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/endpoint.cpp, src/gnomemeeting.cpp, src/lid.cpp, 
	src/main_window.cpp, src/main_window.h: Started to GMObjectify the
	main window.
	
2004-06-28  Damien Sandras  <dsandras@gnome.org>

	* configure.in, lib/contacts/Makefile.am: Enable EDS by default in
	case of GNOME build, disable it in case of non-GNOME build.

2004-06-24  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts-local.h
	lib/contacts/gm_contacts.cpp: Added possibility to modify the name
	of a local address book.

	* src/addressbook_window.cpp: Do not display the popup menu if
	no contact is selected.

2004-06-21  Damien Sandras  <dsandras@gnome.org>
